--- a/app/src/main/res/layout/ride_item.xml
+++ b/app/src/main/res/layout/ride_item.xml
@@ -54,5 +54,11 @@
             app:layout_constraintTop_toBottomOf="@+id/cycling_imgv" />
 
     </LinearLayout>
+    <ImageView
+        android:id="@+id/delete_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/ic_delete" />
 
 </LinearLayout>
